public/style.css
/* ... */
kbd {
    display: inline-block;
    padding: 2px 4px;
    font-family: var(--monoFontFamily);
    white-space: nowrap;
    /* background-color: #eeeeee; */
    background-color: rgba(255, 255, 255, 0.9);
    color: #333;
    border: 1px solid #b4b4b4;
    border-radius: 3px;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    font-size: 90%;
    line-height: 1;
}

samp {
    display: block;
    font-family: var(--monoFontFamily);
    white-space: pre-wrap;
    text-align: start;
    justify-content: left;
}

hr {
    background: linear-gradient(90deg, transparent, var(--color-border, var(--SmartThemeBorderColor)), transparent);
    margin: 10px 0;
    height: 1px;
    min-height: 1px;
    border: 0;
    opacity: 0.2;
}

#version_display {
    padding: 5px;
    opacity: 0.8;
}

/*TOPPER margin*/

#top-bar {
    width: 100vw;
    width: 100dvw;
    max-width: 100vw;
    margin: 0;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--topBarBlockSize);
    position: absolute;
    border-bottom: 1px solid var(--color-border, var(--SmartThemeBorderColor));
    box-shadow: 0 4px 24px rgba(2, 8, 5, 0.25);
    backdrop-filter: blur(20px);
    background-color: color-mix(in srgb, var(--SmartThemeBlurTintColor) 90%, transparent);
    -webkit-backdrop-filter: blur(20px);
    z-index: 3005;
    gap: 2px;
}

#sheld {
    display: flex;
    flex-direction: column;
    /* -1px to give sheld some wiggle room to bounce off tobar when moving*/
    height: calc(100vh - var(--topBarBlockSize) - 1px);
    height: calc(100dvh - var(--topBarBlockSize) - 1px);
    max-height: calc(100dvh - var(--topBarBlockSize) - 1px);
    overflow-x: hidden;
    /* max-width: 50vw; */
    position: absolute;
    left: calc((100vw - var(--sheldWidth))/2);
    left: calc((100dvw - var(--sheldWidth))/2);
    top: var(--topBarBlockSize);
    margin: 0 auto;
    left: 0;
    right: 0;
    z-index: 30;
    min-height: 100px;
    min-width: 100px;
    width: var(--sheldWidth);
}

.drag-grabber {
    position: absolute;
    /*     width: 20px !important;
    height: 20px !important; */
    margin: 0px 5px;
    color: var(--SmartThemeBodyColor);
    z-index: 2000;
    text-align: center;
    /* border-radius: 5px; */
    vertical-align: middle;
    right: 0px;
    top: 0px;
    opacity: 0.5;
    cursor: grab;
    /* border: 1px solid var(--SmartThemeBorderColor); */
    cursor: -moz-grab;
    cursor: -webkit-grab;
    display: none;
    filter: drop-shadow(0px 0px 0px black);
    transition: all var(--animation-duration-2x);
    font-size: calc(var(--mainFontSize)*1.3);
}

.drag-grabber:hover {
    opacity: 1;
}

body .panelControlBar {
    position: absolute;
    right: 5px;
    top: 5px;
    z-index: 2000;
    min-width: 55px;
    justify-content: flex-end;
    gap: 0px;
    transition: all var(--animation-duration-2x);
}

.zoomed_avatar .panelControlBar {
    opacity: 0;
}

.zoomed_avatar:hover .panelControlBar {
    opacity: 1;
}

.panelControlBar .drag-grabber {
    position: unset;
}

#sheldheader:active {
    cursor: grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
}

.pull-tab {
    height: 10px;
    width: 10px;
    background-color: var(--SmartThemeEmColor);
    position: absolute;
    bottom: 0px;
    right: 0px;
    pointer-events: none;
    z-index: 2001;
}

#chat {
    max-height: calc(100vh - calc(var(--topBarBlockSize) + var(--bottomFormBlockSize)));
    overflow-x: hidden;
    padding-bottom: 0;
    overflow-y: scroll;
    display: flex;
    bottom: 10px;
    /*     border-bottom: 1px solid var(--SmartThemeBorderColor);
    border-left: 1px solid var(--SmartThemeBorderColor);
    border-right: 1px solid var(--SmartThemeBorderColor); */
    backdrop-filter: blur(var(--SmartThemeBlurStrength));
    background-color: var(--SmartThemeChatTintColor);
    -webkit-backdrop-filter: blur(var(--SmartThemeBlurStrength));
    text-shadow: 0px 0px calc(var(--shadowWidth) * 1px) var(--SmartThemeShadowColor);
    flex-direction: column;
    z-index: 30;
    flex-grow: 1;
}

#form_sheld {
    white-space: nowrap;
    width: 100%;
    margin: 1px auto 0 auto;
    z-index: 30;
}

/* special case for desktop Safari to allow #sheld resizing */
@media only screen and (min-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (pointer: fine) {
    #form_sheld {
        margin-bottom: 4px;
    }
}

#send_form {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    width: 100%;
    margin: 0 auto 0 auto;
    border: 1px solid var(--SmartThemeBorderColor);
    border-radius: 0 0 1.65rem 1.65rem;
    background-color: var(--SmartThemeBlurTintColor);
    backdrop-filter: blur(20px);
}

/* #send_form.no-connection {
    background-color: var(--crimson70a) !important;
} */

#nonQRFormItems {
    padding: 0;
    border: 0;
    position: relative;
    background-position: center;
    display: flex;
    flex-direction: row;
    column-gap: 5px;
    font-size: var(--bottomFormIconSize);
    order: 25;
    width: 100%;
}

#leftSendForm,
#rightSendForm {
    display: flex;
    flex-wrap: wrap;
}

#leftSendForm {
    order: 1;
    padding-left: 2px;

}

#rightSendForm {
    order: 3;
    padding-right: 2px;
}

#rightSendForm>div:not(.mes_stop),
#leftSendForm>div {
    width: var(--bottomFormBlockSize);
    height: var(--bottomFormBlockSize);
    margin: 0;
    border: none;
    cursor: pointer;
    opacity: 0.7;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: opacity var(--animation-duration-2x);
}

#rightSendForm>div:hover,
#leftSendForm>div:hover {
    opacity: 1;
    filter: brightness(1.2);
}

#send_but {
    order: 2;
    background-color: var(--color-primary, #f1b285) !important;
    color: var(--color-background, #130f0d) !important;
    border-color: transparent !important;
    border-radius: 9999px;
    font-weight: 600;
}

#mes_continue {
    order: 1;
}
/* ... */

